--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,8 @@
-@import './utils/mixins';
-@import './utils/placeholders';
-@import './utils/variables';
+// @import './utils/mixins';
+// @import './utils/placeholders';
+// @import './utils/variables';
 
-@import './base/normalize';
-@import './base/common';
+// @import './base/normalize';
+// @import './base/common';
 
-@import './components/logo';
+// @import './components/logo';
