--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,44 @@
 html {
   scroll-behavior: smooth;
 }
+body {
+  font-family: $font-family;
+  color: $text-color;
+  background-color: $bg-color;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+
+  @media screen and (min-width: $bp-desktop) {
+    .container {
+      width: 1950px;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+.list {
+  list-style: none;
+}
