--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
-$font-family: TenorSans;
+$font-family: 'Tenor Sans', sans-serif;
 
-$text-color: #34343f;
+$text-color: rgba(255, 255, 255, 1);
 $bg-color: #313140;
 
 // $button-color: #ce946b;
@@ -8,3 +8,7 @@ $bg-color: #313140;
 // $icons-fill-color: #e4beb5;
 // $sm-icons-color: #edd5d0;
 // $numbers-color: #eab1b4;
+
+$bp-mobile: 320px;
+$bp-tablet: 768px;
+$bp-desktop: 1950px;
