--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -315,12 +315,11 @@ p {
 }
 
 header {
-  height: 100px;
-  background-color: #313140;
+  padding: 0;
 }
 
 .header__wrapper {
-  position: fixed;
+  position: absolute;
   z-index: 1100;
   width: 100%;
 }
@@ -329,8 +328,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 20px;
 }
 
 .header__description {
@@ -377,7 +375,7 @@ header {
 }
 
 .header__callback-image {
-  padding-top: 15px;
+  margin-top: 10px;
 }
 
 .logo {
@@ -387,5 +385,127 @@ header {
 .logo__wrapper {
   display: flex;
   align-items: center;
+}
+
+.hero {
+  height: 1100px;
+  padding-left: 166px;
+  background: url("../images/hero/artists.png") 840px 155px no-repeat, url("../images/hero/master.png") 740px 0 no-repeat, url("../images/hero/room.png") 300px -50px no-repeat, url("../images/hero/dust.png") 740px 0 no-repeat, url("../images/hero/oval.png") 340px -50px no-repeat;
+}
+
+.hero__title {
+  padding-top: 177px;
+  padding-bottom: 26px;
+  color: white;
+  font-family: "Tenor Sans", sans-serif;
+  font-size: 50px;
+  line-height: 59px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.hero__title-accent {
+  color: #e5b093;
+}
+
+.hero__description {
+  padding-bottom: 50px;
+  color: white;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.hero__description-accent {
+  color: #eab1b4;
+}
+
+.hero__scroll-down {
+  background: url("../images/hero/scroll_down.png") no-repeat;
+  width: 27px;
+  height: 190px;
+  margin-left: -150px;
+  margin-top: -140px;
+}
+
+.hero__registration-phone {
+  margin-top: -40px;
+  margin-bottom: 14px;
+  display: block;
+  background: #ffffff;
+  border: 1px solid rgba(250, 250, 250, 0.165952);
+  box-shadow: inset 0px 1px 4px #9d9db0;
+  border-radius: 7px;
+  width: 333px;
+  height: 70px;
+  padding: 26px;
+}
+
+.hero__registration-button {
+  width: 340px;
+  height: 99px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(314.24deg, #c88c61 25.11%, #ebbe9c 88.64%);
+  box-shadow: inset 0px 0px 12px #e5b79a;
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 16px;
+  border-top-left-radius: 7px 50px;
+  border-bottom-left-radius: 7px 50px;
+  border-top-right-radius: 7px 50px;
+  border-bottom-right-radius: 7px 50px;
+  margin-bottom: 180px;
+}
+
+.hero__registration-button:hover {
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 6500;
+  transition-duration: 300ms;
+}
+
+.hero__registration-button-icon {
+  margin-left: 19px;
+}
+
+.hero__services-icon {
+  display: inline-block;
+  width: 34px;
+  height: 33px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.hero__registration-phone {
+  background-color: aqua;
+  background-image: url("../images/hero/phone.png");
+}
+
+.hero__services-list {
+  display: flex;
+}
+
+.hero__services-item:not(:last-child) {
+  margin-right: 200px;
+}
+
+.hero__services-item:nth-child(even) {
+  padding-top: 100px;
+}
+
+.hero__services-index {
+  display: block;
+  width: 85px;
+  height: 85px;
+  background-image: url("../images/hero/star.png");
+  background-repeat: no-repeat;
+}
+
+.hero__services-index-number {
+  font-size: 80px;
+  margin-left: 50px;
+  color: #696975;
 }
 /*# sourceMappingURL=main.css.map */
