added styles for hero section

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,7 +3,7 @@
   padding-left: 166px;
   // background: $bg-color;
   background: url('../images/hero/artists.png') 840px 155px no-repeat,
-    url('../images/hero/master.png') 740px 0 no-repeat,
+    url('../images/hero/girl.png') 600px -45px no-repeat,
     url('../images/hero/room.png') 300px -50px no-repeat,
     url('../images/hero/dust.png') 740px 0 no-repeat,
     url('../images/hero/oval.png') 340px -50px no-repeat;
@@ -77,36 +77,25 @@
   &__registration-button-icon {
     margin-left: 19px;
   }
-  &__services-icon {
-    display: inline-block;
-    width: 34px;
-    height: 33px;
-    margin: 0 auto;
-    text-align: center;
-  }
+
   &__registration-phone {
-    background-color: aqua;
-    background-image: url('../images/hero/phone.png');
+    background: url('../images/hero/phone.png') no-repeat 20px;
+    background-color: #ffffff;
+    padding-left: 80px;
+    border: none;
   }
-  &__services-list {
-    display: flex;
-  }
-  &__services-item:not(:last-child) {
-    margin-right: 200px;
-  }
-  &__services-item:nth-child(even) {
-    padding-top: 100px;
-  }
-  &__services-index {
-    display: block;
-    width: 85px;
-    height: 85px;
-    background-image: url('../images/hero/star.png');
-    background-repeat: no-repeat;
-  }
-  &__services-index-number {
-    font-size: 80px;
-    margin-left: 50px;
-    color: #696975;
+  &__services {
+    &-image-container {
+      display: flex;
+    }
+    &-list {
+      display: flex;
+    }
+    &-item:nth-child(even) {
+      padding-top: 100px;
+    }
+    &-oval {
+      margin-left: -30px;
+    }
   }
 }
