--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -28,45 +28,66 @@
   </form>
   <ul class="hero__services-list list">
     <li class="hero__services-item">
-      <div class="hero__services-index">
+      <div class="hero__services-image-container">
         <img
           class="hero__services-icon"
-          src="./images/hero/chair.svg"
+          src="./images/hero/chair.png"
           alt="chair icon"
-          width="34"
-          height="33"
         />
+        <img
+          class="hero__services-oval"
+          src="./images/hero/oval1.png"
+          alt="oval"
+        />
+      </div>
 
-        <span class="hero__services-index-number">01</span>
-      </div>
-      <p>Регулируемые <br />кушетки и стулья</p>
+      <p class="hero__services-title">Регулируемые <br />кушетки и стулья</p>
     </li>
+
     <li class="hero__services-item">
-      <div class="hero__services-index">
-        <img src="./images/hero/star.png" alt="" />
-        <span class="hero__services-index-number">02</span>
+      <div class="hero__services-image-container">
+        <img
+          class="hero__services-icon"
+          src="./images/hero/equipment.png"
+          alt="equipment icon"
+        />
+        <img
+          class="hero__services-oval"
+          src="./images/hero/oval2.png"
+          alt="oval"
+        />
       </div>
-      <p>
+      <p class="hero__services-title">
         Сухожаровой <br />
         шкаф
       </p>
     </li>
     <li class="hero__services-item">
-      <div class="hero__services-index">
-        <img src="./images/hero/star.png" alt="" />
-        <span class="hero__services-index-number">03</span>
+      <div class="hero__services-image-container">
+        <img
+          class="hero__services-icon"
+          src="./images/hero/cost.png"
+          alt="cost icon"
+        />
+        <img
+          class="hero__services-oval"
+          src="./images/hero/oval2.png"
+          alt="oval"
+        />
       </div>
-      <p>
+
+      <p class="hero__services-title">
         Расходники <br />
         по себестоимости
       </p>
     </li>
-    <li class="hero__services-item">
-      <div class="hero__services-index">
-        <img src="./images/hero/star.png" alt="" />
-        <span class="hero__services-index-number">04</span>
-      </div>
-      <p>
+    <li class="hero__services-title">
+      <img
+        class="hero__services-icon"
+        src="./images/hero/interior.png"
+        alt="interior icon"
+      />
+      <p class="hero__services-name">
         Интерьер, производящий<br />
         wow-эффект
       </p>
