edited styles for hero section

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -34,11 +34,6 @@
           src="./images/hero/chair.png"
           alt="chair icon"
         />
-        <img
-          class="hero__services-oval"
-          src="./images/hero/oval1.png"
-          alt="oval"
-        />
       </div>
 
       <p class="hero__services-title">Регулируемые <br />кушетки и стулья</p>
@@ -50,11 +45,6 @@
           class="hero__services-icon"
           src="./images/hero/equipment.png"
           alt="equipment icon"
-        />
-        <img
-          class="hero__services-oval"
-          src="./images/hero/oval2.png"
-          alt="oval"
         />
       </div>
       <p class="hero__services-title">
@@ -69,11 +59,6 @@
           src="./images/hero/cost.png"
           alt="cost icon"
         />
-        <img
-          class="hero__services-oval"
-          src="./images/hero/oval2.png"
-          alt="oval"
-        />
       </div>
 
       <p class="hero__services-title">
@@ -81,7 +66,7 @@
         по себестоимости
       </p>
     </li>
-    <li class="hero__services-title">
+    <li class="hero__services-item">
       <img
         class="hero__services-icon"
         src="./images/hero/interior.png"
