--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -14,6 +14,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding-top: 20px;
+    padding-left: 119px;
     // padding-bottom: 30px;
   }
   &__description {
