--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,14 +1,16 @@
 .hero {
   height: 1100px;
-  padding-left: 166px;
+  padding-left: 250px;
+  margin-bottom: 170px;
   // background: $bg-color;
   background: url('../images/hero/artists.png') 840px 155px no-repeat,
     url('../images/hero/girl.png') 600px -45px no-repeat,
     url('../images/hero/room.png') 300px -50px no-repeat,
     url('../images/hero/dust.png') 740px 0 no-repeat,
-    url('../images/hero/oval.png') 340px -50px no-repeat;
+    url('../images/hero/oval.png') 340px -50px no-repeat,
+    url('../images/hero/bg-light.png') -60px -50px no-repeat;
   &__title {
-    padding-top: 177px;
+    padding-top: 200px;
 
     padding-bottom: 26px;
     color: $text-color;
@@ -35,8 +37,8 @@
     background: url('../images/hero/scroll_down.png') no-repeat;
     width: 27px;
     height: 190px;
-    margin-left: -150px;
-    margin-top: -140px;
+    margin-left: -140px;
+    margin-top: -130px;
   }
   &__registration-phone {
     // box-sizing: border-box;
@@ -91,11 +93,15 @@
     &-list {
       display: flex;
     }
+    &-title {
+      text-align: center;
+      margin-top: 5px;
+    }
     &-item:nth-child(even) {
       padding-top: 100px;
     }
-    &-oval {
-      margin-left: -30px;
+    &-item:not(:last-child) {
+      margin-right: 170px;
     }
   }
 }
