--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -329,6 +329,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding-top: 20px;
+  padding-left: 119px;
 }
 
 .header__description {
@@ -389,12 +390,13 @@ header {
 
 .hero {
   height: 1100px;
-  padding-left: 166px;
-  background: url("../images/hero/artists.png") 840px 155px no-repeat, url("../images/hero/girl.png") 600px -45px no-repeat, url("../images/hero/room.png") 300px -50px no-repeat, url("../images/hero/dust.png") 740px 0 no-repeat, url("../images/hero/oval.png") 340px -50px no-repeat;
+  padding-left: 250px;
+  margin-bottom: 170px;
+  background: url("../images/hero/artists.png") 840px 155px no-repeat, url("../images/hero/girl.png") 600px -45px no-repeat, url("../images/hero/room.png") 300px -50px no-repeat, url("../images/hero/dust.png") 740px 0 no-repeat, url("../images/hero/oval.png") 340px -50px no-repeat, url("../images/hero/bg-light.png") -60px -50px no-repeat;
 }
 
 .hero__title {
-  padding-top: 177px;
+  padding-top: 200px;
   padding-bottom: 26px;
   color: white;
   font-family: "Tenor Sans", sans-serif;
@@ -424,8 +426,8 @@ header {
   background: url("../images/hero/scroll_down.png") no-repeat;
   width: 27px;
   height: 190px;
-  margin-left: -150px;
-  margin-top: -140px;
+  margin-left: -140px;
+  margin-top: -130px;
 }
 
 .hero__registration-phone {
@@ -485,11 +487,16 @@ header {
   display: flex;
 }
 
+.hero__services-title {
+  text-align: center;
+  margin-top: 5px;
+}
+
 .hero__services-item:nth-child(even) {
   padding-top: 100px;
 }
 
-.hero__services-oval {
-  margin-left: -30px;
+.hero__services-item:not(:last-child) {
+  margin-right: 170px;
 }
 /*# sourceMappingURL=main.css.map */
