edited header/hero styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,7 +14,11 @@
       <nav class="header__navigation">
         <ul class="header__navigation-list list">
           <li class="header__navigation-item">
-            <a class="header__navigation-link link" href="index.html">О нас</a>
+            <a
+              class="header__navigation-link link active-page"
+              href="index.html"
+              >О нас</a
+            >
           </li>
           <li class="header__navigation-item">
             <a class="header__navigation-link link" href="index.html">Цены</a>
