--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,7 +7,8 @@
     <p class="hero__description">
       Занимайтесь любимым делом, зарабатывая до
       <span class="hero__description-accent">1 000 000 руб./год,</span
-      ><br />арендуя локации в одной из 2 точек сети Vibe Coworking
+      ><br />арендуя локации в одной из 2 точек сети
+      <span class="hero__description-vibe">Vibe Coworking</span>
     </p>
   </div>
   <div class="hero__scroll-down"></div>
@@ -26,6 +27,20 @@
       />
     </button>
   </form>
+  <nav class="hero__navigation">
+    <ul class="hero__navigation-list list">
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+      <li class="hero__navigation-item"></li>
+    </ul>
+  </nav>
   <ul class="hero__services-list list">
     <li class="hero__services-item">
       <div class="hero__services-image-container">
