--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -14,8 +14,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding-top: 20px;
-    padding-left: 119px;
-    // padding-bottom: 30px;
+    padding-left: 220px;
+    padding-right: 270px;
   }
   &__description {
     color: rgba(255, 255, 255, 1);
@@ -26,8 +26,6 @@ header {
 
     font-size: 12px;
     letter-spacing: 0.4px;
-
-    margin-right: 112px;
   }
   &__divider {
     display: block;
@@ -39,6 +37,7 @@ header {
   &__navigation {
     &-list {
       display: flex;
+      margin-left: -200px;
     }
     &-link {
       color: $text-color;
@@ -50,7 +49,6 @@ header {
   &__callback {
     display: flex;
     align-items: center;
-    margin-left: 280px;
 
     &-number {
       color: $text-color;
