--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -9,10 +9,10 @@
 //   align-items: center;
 // }
 
-// %flex-j {
-//   display: flex;
-//   justify-content: center;
-// }
+%flex-j {
+  display: flex;
+  justify-content: center;
+}
 // %block-m {
 //   display: block;
 //   margin-right: auto;
