edited styles hero/history sections

--- a/src/partials/history.html
+++ b/src/partials/history.html
@@ -1,30 +1,35 @@
-<section class="history container"></section>
-<h1 class="history__title">
-  время открыть новое дело <br />
-  в <span class="history__title-accent">новом пространстве</span>
-</h1>
-<div class="history__wrapper">
-  <img src="./images/history/chair.png" />
-  <div class="history__description">
-    <p class="history__description-text">
-      Нам обидно слышать истории, где талантливая фея сферы красоты отдает
-      салону примерно 60% выручки. Искренне считаем, что бьюти-предприниматели
-      достойны большего. Поэтому создали место, помогающее работать и тратить
-      прибыль только на себя.
-      <span class="history__description-details">
-        Сдаем кабинеты для косметологов, массажистов, бровистов, лэшмейкеров от
-        500 руб./час. Без переплат, в оборудованном всем необходимым помещении.
-        Арендуйте на любой срок и уже завтра принимайте клиентов в современном
-        коворкинге.
-      </span>
-    </p>
-    <button type="button" class="hero__registration-button">
-      ЗАБРОНИРОВАТЬ ВРЕМЯ
-      <img
-        src="./images/hero/cursor.png"
-        alt="cursor"
-        class="hero__registration-button-icon"
-      />
-    </button>
+<section class="history container">
+  <h1 class="history__title">
+    время открыть новое дело <br />
+    в <span class="history__title-accent">новом пространстве</span>
+  </h1>
+  <div class="history__wrapper">
+    <img src="./images/history/chair.png" />
+    <div class="history__description">
+      <p class="history__description-text">
+        Нам обидно слышать истории, где талантливая фея сферы красоты отдает
+        салону примерно 60% выручки. Искренне считаем, что бьюти-предприниматели
+        достойны большего. Поэтому создали место, помогающее работать и тратить
+        прибыль только на себя.
+        <br />
+        <span class="history__description-details">
+          Сдаем кабинеты для косметологов, массажистов, бровистов, лэшмейкеров
+          <span class="history__description-accent">от 500 руб./час.</span> Без
+          переплат, в оборудованном всем необходимым помещении. Арендуйте на
+          любой срок и уже завтра принимайте клиентов в современном коворкинге.
+        </span>
+      </p>
+      <button
+        type="button"
+        class="hero__registration-button history__registration-button"
+      >
+        ЗАБРОНИРОВАТЬ ВРЕМЯ
+        <img
+          src="./images/hero/cursor.png"
+          alt="cursor"
+          class="hero__registration-button-icon"
+        />
+      </button>
+    </div>
   </div>
-</div>
+</section>
